# dooropen_api

./: .gitignore  Cargo.toml  README.md  dooropen.yaml
docs/: Status.md
dooropen/: Cargo.toml
dooropen/src/: lib.rs  main.rs  server.rs
dooropen_api/: Cargo.toml  README.md
dooropen_api/api/: openapi.yaml
dooropen_api/docs/: DoorStatus.md  Header.md  Time.md  door_info_api.md  test_api.md
dooropen_api/examples/client/: main.rs
dooropen_api/examples/server/: main.rs  server.rs
dooropen_api/src/: lib.rs  models.rs
dooropen_api/src/client/: mod.rs
dooropen_api/src/server/: mod.rs
examples/client/: main.rs
examples/server/: server.rs
src/: lib.rs  models.rs
webserver/config/: server.conf
webserver/html_root/: dooropen.js  index.html
